fixed wrapping issue on main page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -243,6 +243,8 @@ input[type=checkbox] {
     margin: 0 auto;
     border-bottom: 1px solid dimgray;
     border-radius: 5%;
+    display: flex;
+    justify-content: center;
 }
 
 
